# generic-bevy-asset-loader

./: Cargo.toml  README.md  utils.rs
src/: lib.rs  tests.rs
src/assets/: AssetName.ron
src/test/: tests.rs
src/test/expand/: k.rs
