[package]
name = "generic_asset"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "A upgraded version of Tantans asset loading macro for bevy 0.12"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
ron = "0.8.1"
serde = "1.0.193"

